# autopilot

./: README.md  autopilot.py  brainyboat.service  camera.py  course.py  distance.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  settings.py  telemetry.py
