[tool.poetry]
name = "brainyboat-autopilot"
version = "0.0.0"
description = "BrainyBoat autopilot service"
authors = ["Igor <me@igorek.dev>"]
license = "GPL-3.0-only"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
websockets = "^11.0.3"
opencv-python = "^4.8.0.74"
pydantic = "^2.0.3"
httpx = "^0.24.1"
pynmea2 = "^1.19.0"
pydantic-settings = "^2.0.2"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.7.0"


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
filter_files = true
skip = ["__init__.py"]
